# JIT_trees

./: .gitignore  README.md
Code/GBoosting/: CMakeLists.txt  build.sh  buildExe.sh  buildPy.py  buildPy.sh  setup.py
Code/GBoosting/GBoosting/: CMakeLists.txt  DataLoader.cpp  DataLoader.h  GBDecisionTree.h  GBDesicionTree.cpp  GBHist.cpp  GBHist.h  GBTest.h  GBoosting.cpp  GBoosting.h  History.cpp  History.h  Main.cpp  StatisticsHelper.cpp  StatisticsHelper.h  Structs.h  TestLauncher.cpp  TestLauncher.h  build.sh
Code/GBoosting/GBoosting/common/: DataLoader.h  GBDecisionTree.h  GBHist.h  GBTest.h  StatisticsHelper.h  Structs.h  TestLauncher.h
Code/GBoosting/GBoosting/cppMain/: Main.cpp
Code/GBoosting/GBoosting/pybind/: pybind.cpp
Code/GBoosting/common/: GBDecisionTree.cpp  GBDecisionTree.h  GBHist.cpp  GBHist.h  GBTest.h  GBoosting.cpp  GBoosting.h  History.h  Structs.h
Code/GBoosting/cppMain/: Main.cpp
Code/GBoosting/experiments/: RealDataTuned.py  Refit.py  Synt.py  TestOnRealData.ipynb  TuningAnalyzer.py
Code/GBoosting/pyTests/: basic.py  testCases.py  testLauncher.py
Code/GBoosting/pybind/: ArrayAdapter.cpp  ArrayAdapter.h  GBAdapter.cpp  GBAdapter.h  HistoryAdapter.cpp  HistoryAdapter.h  Structs.h  pybind.cpp
Code/GBoosting/src/JIT/: JITedTree.cpp  JITedTree.h
Code/GBoosting/src/TreeHolders/: JITedTree.cpp  JITedTree.h  RegularTree.cpp  RegularTree.h  SWIfStack.cpp  SWTypes.h  SourcesWriter.cpp  SourcesWriter.h  TreeHolder.cpp  TreeHolder.h
Code/GBoosting/src/common/: AtomicTypes.h  BatchingType.h  GBDecisionTree.cpp  GBDecisionTree.h  GBHist.cpp  GBHist.h  GBMultiPredictor.cpp  GBMultiPredictor.h  GBPredictor.cpp  GBPredictor.h  GBUsualPredictor.cpp  GBUsualPredictor.h  GBoosting.cpp  GBoosting.h  History.cpp  History.h  ParseHelper.cpp  ParseHelper.h  PybindHeader.h  StatisticsHelper.cpp  StatisticsHelper.h  Structs.h  TreeHolder.cpp  TreeHolder.h
Code/GBoosting/src/pybind/: defaultParameters.h  pybind.cpp
Code/GBoosting/tests/: LoadSave.py  RealDataTuned.py  Refit.py  TestOnRealData.ipynb  TuningAnalyzer.py  basic.py  singleVar.py  testCases.py  testLauncher.py
Code/Legacy/: JITedTree.cpp  JITedTree.h  SWCycles.cpp  SWCycles.h  SWIfStack.cpp  SWIfStack.h  SWTypes.h
